<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:src="@drawable/homefinal">

    </ImageView>

    <TextView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="@string/smarty"
        android:textColor="#0D1215"
        android:textSize="55sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_home"
        android:textColor="#8E9295"
        android:textSize="30sp"
        android:textStyle="italic">

    </TextView>

    <EditText
        android:id="@+id/Name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textColor="#8E9295" />

    <Button
        android:id="@+id/Continue"
        android:layout_width="147dp"
        android:layout_height="69dp"
       android:layout_gravity="center"
        android:background="@drawable/continuer"
        android:text="@string/cont"
        android:textColor="#F8FAF9"
        android:textSize="25sp">

    </Button>


</LinearLayout>




