<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EFF1F1">


    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="645dp"
        android:layout_alignParentStart="true"
        android:background="#EFF1F1"
      android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#8E9295"
            android:textSize="15sp" />


        <TextView
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/welcome_jordon"
            android:textColor="#0D1215"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="319dp"
            android:layout_height="119dp"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            app:cardCornerRadius="25dp"
            app:cardMaxElevation="50dp">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/livingroom">

            </ImageButton>

            <TextView
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:text="@string/living_room"
                android:layout_marginStart="2dp"
                android:textColor="#F8FAF9"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="95dp"
                android:text="@string/_4_devices"
                android:layout_marginStart="7dp"
                android:textColor="#F8FAF9"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="319dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="50dp">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mediaroom">

            </ImageButton>

            <TextView
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/media_room"
                android:layout_marginStart="2dp"
                android:textColor="#F8FAF9"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/_6_devices"
                android:textColor="#F8FAF9"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="50dp">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bathroom">

            </ImageButton>

            <TextView
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/bathroom"
                android:textColor="#F8FAF9"
                android:layout_marginStart="2dp"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="110dp"
                android:layout_height="39dp"
                android:layout_marginTop="105dp"
                android:text="@string/_1_devices"
                android:textColor="#F8FAF9"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="323dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="50dp">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bedroom">

            </ImageButton>

            <TextView
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/bed_room"
                android:layout_marginStart="2dp"
                android:textColor="#F8FAF9"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="105dp"
                android:text="@string/_3_devices"
                android:textColor="#F8FAF9"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
        </RelativeLayout>









